# VendingMachineFlask

./: .coverage  .pre-commit-config.yaml  README.md  app.py  coverage.xml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
instance/: test.db  vending_machine.db
models/: machine.py  stock.py
src/: __init__.py  app.py  db.py  routes.py
src/api/: product_api.py  stock_timeline_api.py  vending_machine_api.py
src/models/: __init__.py  machine.py  product.py  stock.py  stock_timeline.py  vending_machine.py
test/: .coverage  conftest.py  coverage.xml  test_machine.py  test_routes.py  test_stock.py  test_stock_timeline.py  test_vending_machine.py
